// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshots > changes variant 1`] = `
<DocumentFragment>
  <button
    class="sc-jSFipO sc-gKAaef tqXoi aje-btn aje-btn--secondary is-auto"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots > loading completed state 1`] = `
<DocumentFragment>
  <button
    class="sc-jSFipO sc-gKAaef tqXoi aje-btn aje-btn--primary is-auto is-loading"
    type="button"
  >
    <div
      class="sc-eCAqax gIGjcs aje-spinner is-medium is-centered"
    >
      <span
        class="sc-hKFymg qxLuF"
      />
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots > loading state 1`] = `
<DocumentFragment>
  <button
    class="sc-jSFipO sc-gKAaef tqXoi aje-btn aje-btn--primary is-auto is-loading"
    type="button"
  >
    <div
      class="sc-eCAqax gIGjcs aje-spinner is-medium is-centered"
    >
      <svg
        class="sc-gtsqUy fELEhR circular-loader"
        data-testid="spinner-svg"
        viewBox="25 25 50 50"
      >
        <circle
          class="sc-dlniIP eFniRo loader-path"
          cx="50"
          cy="50"
          fill="none"
          r="20"
          stroke-width="0.5em"
        />
      </svg>
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots > normal display 1`] = `
<DocumentFragment>
  <button
    class="sc-jSFipO sc-gKAaef tqXoi aje-btn aje-btn--primary is-auto"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;
